# pixie

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  SETUP.md  dev.sh  docker-compose.yml  package-lock.json  package.json
pixie/: .coverage  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  run_deployment.py  setup_db.py
pixie/app/: main.py
pixie/app/api/core/: __init__.py  llm_chat.py  llm_client.py  mcp_chat_service.py  prompts.py  tool_schema.py
pixie/app/api/models/: __init__.py  auth.py  chat.py  designs.py  mcp_chat.py  projects.py  tools.py  widgets.py
pixie/app/api/public/: __init__.py  auth.py  chat.py  designs.py  health.py  mcp_chat.py  mcp_tool_call.py  projects.py  tools.py  widgets.py
pixie/app/api/utils/: llm_check.py  widget_deployment.py
pixie/app/db/: db_client.py  local_postgres.py  schema.sql
pixie/app/db/models/: chat.py  designs.py  projects.py  refresh_tokens.py  tools.py  users.py  widgets.py
pixie/app/db/storage/: conversation_repository.py  design_repository.py  mcp_tool_repository.py  project_repository.py  refresh_token_repository.py  tool_widget_repository.py  toolkit_repository.py  toolkit_source_repository.py  ui_widget_resource_repository.py  user_repository.py  widget_chat_repository.py  widget_repository.py  (+1 more)
pixie/app/mcp/: client.py  utils.py
pixie/app/server/: auth.py  auth_middleware.py  config.py  dependencies.py  exceptions.py  middleware.py  project_access.py
pixie/deploy/: enums.py  utils.py
pixie/deploy/sdk/: pixie_server.py
pixie/tests/: test_tools_validation.py
(+157 files in other folders)
